# advent2022

./: README.md  advent-y2022.cabal  stack.yaml
data/: Day05Crates.txt
days/: Day01.hs  Day02Part1.hs  Day02Part2.hs  Day03.hs  Day04.hs  Day05.hs
