cabal-version: 1.12

name:           advent-y2022
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/advent-y2022#readme>
homepage:       https://github.com/githubuser/advent-y2022#readme
bug-reports:    https://github.com/githubuser/advent-y2022/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
build-type:     Simple
extra-source-files: README.md
data-dir: data
data-files: 
    Day01.txt
    Day02.txt
    Day03.txt
    Day04.txt
    Day05Crates.txt
    Day05Moves.txt

source-repository head
  type: git
  location: https://github.com/githubuser/advent-y2022

library
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day01
  main-is: Day01.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
  default-language: Haskell2010

executable day02part1
  main-is: Day02Part1.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
  default-language: Haskell2010

executable day02part2
  main-is: Day02Part2.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
  default-language: Haskell2010  

executable day03
  main-is: Day03.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
  default-language: Haskell2010  

executable day04
  main-is: Day04.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
    , split >=0.2 && <0.3
  default-language: Haskell2010  

executable day05
  main-is: Day05.hs
  other-modules:
      Paths_advent_y2022
  hs-source-dirs:
      days
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      advent-y2022
    , base >=4.7 && <5
    , split >=0.2 && <0.3
    , parsec >=3.1.15 && <3.2
    , vector >=0.13 && <0.14
  default-language: Haskell2010  